add: baseline in notebook 1

--- a/notebooks/1_baseline.ipynb
+++ b/notebooks/1_baseline.ipynb
@@ -373,18 +373,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add target\n",
-    "df_train = df_X_train.merge(df_y_train, on=\"ID\")\n",
-    "df_test = df_X_test.merge(df_y_test, on=\"ID\")\n",
-    "del df_X_train, df_y_train, df_X_test, df_y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def missing_values_table(df):\n",
     "    # Total missing values\n",
     "    mis_val = df.isnull().sum()\n",
@@ -415,14 +403,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The selected dataframe has 24 columns.\n",
+      "The selected dataframe has 23 columns.\n",
       "There are 9 columns that have missing values.\n"
      ]
     },
@@ -514,18 +502,18 @@
        "Column0                9                0.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "missing_values_table(df_train)"
+    "missing_values_table(df_X_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +559,6 @@
        "      <th>Column19</th>\n",
        "      <th>Column20</th>\n",
        "      <th>Column21</th>\n",
-       "      <th>target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -593,7 +580,6 @@
        "      <td>785133.000000</td>\n",
        "      <td>419430.000000</td>\n",
        "      <td>768677.000000</td>\n",
-       "      <td>785133.000000</td>\n",
        "      <td>785133.000000</td>\n",
        "      <td>785133.000000</td>\n",
        "      <td>785133.000000</td>\n",
@@ -625,7 +611,6 @@
        "      <td>0.018759</td>\n",
        "      <td>0.009351</td>\n",
        "      <td>0.002757</td>\n",
-       "      <td>0.094294</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -651,7 +636,6 @@
        "      <td>0.135671</td>\n",
        "      <td>0.096249</td>\n",
        "      <td>0.052439</td>\n",
-       "      <td>0.292237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -671,7 +655,6 @@
        "      <td>0.000000</td>\n",
        "      <td>-832.749615</td>\n",
        "      <td>-1091.545904</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -703,7 +686,6 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -723,7 +705,6 @@
        "      <td>0.000000</td>\n",
        "      <td>0.001351</td>\n",
        "      <td>0.003390</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -755,7 +736,6 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -778,7 +758,6 @@
        "      <td>2.000000</td>\n",
        "      <td>728.000000</td>\n",
        "      <td>12.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
@@ -838,29 +817,29 @@
        "75%         0.000000       0.000000       0.000000       0.000000   \n",
        "max         2.000000     728.000000      12.000000       1.000000   \n",
        "\n",
-       "            Column20       Column21         target  \n",
-       "count  785133.000000  785133.000000  785133.000000  \n",
-       "mean        0.009351       0.002757       0.094294  \n",
-       "std         0.096249       0.052439       0.292237  \n",
-       "min         0.000000       0.000000       0.000000  \n",
-       "25%         0.000000       0.000000       0.000000  \n",
-       "50%         0.000000       0.000000       0.000000  \n",
-       "75%         0.000000       0.000000       0.000000  \n",
-       "max         1.000000       1.000000       1.000000  "
+       "            Column20       Column21  \n",
+       "count  785133.000000  785133.000000  \n",
+       "mean        0.009351       0.002757  \n",
+       "std         0.096249       0.052439  \n",
+       "min         0.000000       0.000000  \n",
+       "25%         0.000000       0.000000  \n",
+       "50%         0.000000       0.000000  \n",
+       "75%         0.000000       0.000000  \n",
+       "max         1.000000       1.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.describe()"
+    "df_X_train.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +848,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 785133 entries, 0 to 785132\n",
-      "Data columns (total 24 columns):\n",
+      "Data columns (total 23 columns):\n",
       " #   Column    Non-Null Count   Dtype  \n",
       "---  ------    --------------   -----  \n",
       " 0   ID        785133 non-null  object \n",
@@ -895,19 +874,18 @@
       " 20  Column19  785133 non-null  int64  \n",
       " 21  Column20  785133 non-null  int64  \n",
       " 22  Column21  785133 non-null  int64  \n",
-      " 23  target    785133 non-null  int64  \n",
-      "dtypes: float64(13), int64(10), object(1)\n",
-      "memory usage: 143.8+ MB\n"
+      "dtypes: float64(13), int64(9), object(1)\n",
+      "memory usage: 137.8+ MB\n"
      ]
     }
    ],
    "source": [
-    "df_train.info()"
+    "df_X_train.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1092,13 +1070,6 @@
        "      <td>785133</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>target</td>\n",
-       "      <td>2</td>\n",
-       "      <td>785133</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1126,23 +1097,45 @@
        "18  Column18             11           785133     0.001\n",
        "19  Column19              2           785133     0.000\n",
        "20  Column20              2           785133     0.000\n",
-       "21  Column21              2           785133     0.000\n",
-       "22    target              2           785133     0.000"
+       "21  Column21              2           785133     0.000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data = []\n",
-    "for col in df_train.columns:\n",
-    "    if df_train[col].dtype != 'object':\n",
-    "        num_non_null_values = len(df_train[~df_train[col].isna()])\n",
-    "        unique_pct = round((df_train[col].nunique() / num_non_null_values)*100, 3)\n",
-    "        data.append([col, df_train[col].nunique(), num_non_null_values, unique_pct])\n",
+    "for col in df_X_train.columns:\n",
+    "    if df_X_train[col].dtype != 'object':\n",
+    "        num_non_null_values = len(df_X_train[~df_X_train[col].isna()])\n",
+    "        unique_pct = round((df_X_train[col].nunique() / num_non_null_values)*100, 3)\n",
+    "        data.append([col, df_X_train[col].nunique(), num_non_null_values, unique_pct])\n",
     "pd.DataFrame(data, columns=['Column', 'Unique values', 'Non-null values', 'Unique %'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AP score (test): 0.9281483311000372\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import average_precision_score\n",
+    "\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(df_X_train.drop('ID', axis=1), df_y_train['target'])\n",
+    "y_pred_test = model.predict_proba(df_X_test.drop('ID', axis=1))[:, 1]\n",
+    "print(f\"AP score (test): {average_precision_score(df_y_test['target'], y_pred_test)}\")"
    ]
   }
  ],
